--- a/src/templates/basic-page.html
+++ b/src/templates/basic-page.html
@@ -26,6 +26,14 @@
                 <li><b>discord:</b> @milo28</li>
             </ul>
         </div>
+        <a href='https://milobit.net'><img src='<--field --name="root">/badge.gif'></a>
+        <img src='<--field --name="root">/graphics/cloud.png'>
+        <img src='<--field --name="root">/graphics/any-browser.png'>
+        <img src='<--field --name="root">/graphics/catboys-meow.webp'>
+        <img src='<--field --name="root">/graphics/make-a-website.jpg'>
+        <a href='https://www.blender.org'><img src='<--field --name="root">/graphics/blender.gif'></a>
+        <a href='https://neovim.io'><img src='<--field --name="root">/graphics/neovim.png'></a>
+        <a href='https://archlinux.org'><img src='<--field --name="root">/graphics/archlinux.gif'></a>
     </th>
     <td>
         <--inner-html>
