--- a/templates/basic-page.html
+++ b/templates/basic-page.html
@@ -28,6 +28,7 @@
         </div>
         <a href='https://milobit.net'><img src='<--field --name="root">/badge.gif'></a>
         <a href='https://insect.christmas'><img src='<--field --name="root">/graphics/insect.christmasbutton.jpg'></a>
+        <a href='https://pink-luva.neocities.org/'><img src='<--field --name="root">/graphics/ae.jpg'></a>
         <img src='<--field --name="root">/graphics/cloud.png'>
         <img src='<--field --name="root">/graphics/any-browser.png'>
         <img src='<--field --name="root">/graphics/catboys-meow.webp'>
