--- a/templates/basic-page.html
+++ b/templates/basic-page.html
@@ -23,6 +23,7 @@
                 <li><a href="https://github.com/milo256">github</a></li>
                 <li><a href="https://www.youtube.com/@milo3733">youtube</a></li>
                 <li><a href="https://milobyte.tumblr.com/">tumblr</a></li>
+                <li><a href="https://milobyte.newgrounds.com/">newgrounds</a></li>
                 <li><b>discord:</b> @milo28</li>
             </ul>
         </div>
