switch to absolute paths

--- a/templates/basic-page.html
+++ b/templates/basic-page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title><--field --name="title"></title>
-<link rel="stylesheet" href='<--field --name="root">/style.css'>
+<link rel="stylesheet" href='/style.css'>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
@@ -13,7 +13,7 @@
             <h2>navbar</h2>
             <ul class="vnav">
                 <li><a href="/">home</a></li>
-                <li><a href="art/index.html">art</a></li>
+                <li><a href="/art/index.html">art</a></li>
             </ul>
         </div>
         <div class="window">
@@ -27,16 +27,16 @@
                 <li><b>discord:</b> @milo28</li>
             </ul>
         </div>
-        <a href='https://milobit.net'><img src='<--field --name="root">/badge.gif'></a>
-        <a href='https://insect.christmas'><img src='<--field --name="root">/graphics/insect.christmasbutton.jpg'></a>
-        <a href='https://pink-luva.neocities.org/'><img src='<--field --name="root">/graphics/ae.jpg'></a>
-        <img src='<--field --name="root">/graphics/cloud.png'>
-        <img src='<--field --name="root">/graphics/any-browser.png'>
-        <img src='<--field --name="root">/graphics/catboys-meow.webp'>
-        <img src='<--field --name="root">/graphics/make-a-website.jpg'>
-        <!-- <a href='https://www.blender.org'><img src='<--field --name="root">/graphics/blender.gif'></a> -->
-        <a href='https://neovim.io'><img src='<--field --name="root">/graphics/neovim.png'></a>
-        <a href='https://archlinux.org'><img src='<--field --name="root">/graphics/archlinux.gif'></a>
+        <a href='https://milobit.net'><img src='/badge.gif'></a>
+        <a href='https://insect.christmas'><img src='/graphics/insect.christmasbutton.jpg'></a>
+        <a href='https://pink-luva.neocities.org/'><img src='/graphics/ae.jpg'></a>
+        <img src='/graphics/cloud.png'>
+        <img src='/graphics/any-browser.png'>
+        <img src='/graphics/catboys-meow.webp'>
+        <img src='/graphics/make-a-website.jpg'>
+        <!-- <a href='https://www.blender.org'><img src='/graphics/blender.gif'></a> -->
+        <a href='https://neovim.io'><img src='/graphics/neovim.png'></a>
+        <a href='https://archlinux.org'><img src='/graphics/archlinux.gif'></a>
     </th>
     <td>
         <--inner-html>
