--- a/templates/post.html
+++ b/templates/post.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title><--field --name="title"></title>
-<link rel="stylesheet" href='<--field --name="root">/style.css'>
+<link rel="stylesheet" href='/style.css'>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
@@ -16,8 +16,8 @@
         </div>
         <div class="window">
             <ul class="hnav", style="position:absolute; right: 0">
-                <li><a href="<--field --name="previous">">← previous</a></li>
-                <li><a href="<--field --name="next">">next →</a></li>
+                <li><a href="<--field --name="previous">"><- previous</a></li>
+                <li><a href="<--field --name="next">">next -></a></li>
             </ul>
             <h2><--field --name="title"></h2>
             <--inner-html>
