--- a/templates/basic-page.html
+++ b/templates/basic-page.html
@@ -14,6 +14,7 @@
             <ul class="vnav">
                 <li><a href="/">home</a></li>
                 <li><a href="/art/index.html">art</a></li>
+                <li><a href="https://milobyte.atabook.org">guestbook</a></li>
             </ul>
         </div>
         <div class="window">
