--- a/templates/basic-page.html
+++ b/templates/basic-page.html
@@ -10,10 +10,11 @@
 <tr>
     <th>
         <div class="window">
-            <h2>navbar</h2>
+            <h2>nav</h2>
             <ul class="vnav">
                 <li><a href="/">home</a></li>
-                <li><a href="/art/index.html">art</a></li>
+                <li><a href="/art">gallery</a></li>
+                <li><a href="/com">commissions</a></li>
                 <li><a href="https://milobyte.atabook.org">guestbook</a></li>
             </ul>
         </div>
@@ -28,9 +29,6 @@
                 <li><b>discord:</b> @milo28</li>
             </ul>
         </div>
-        <a href='https://milobit.net'><img src='/badge.gif'></a>
-        <a href='https://insect.christmas'><img src='/graphics/insect.christmasbutton.jpg'></a>
-        <a href='https://pink-luva.neocities.org/'><img src='/graphics/ae.jpg'></a>
         <img src='/graphics/cloud.png'>
         <img src='/graphics/any-browser.png'>
         <img src='/graphics/catboys-meow.webp'>
