--- a/templates/post.html
+++ b/templates/post.html
@@ -9,9 +9,11 @@
     <div style="width: 900px">
         <div class="window" style="display:inline-block; margin-bottom: 0;">
             <ul class="hnav">
-                <h2 class="inline">Navbar</h2>
+                <h2 class="inline">nav</h2>
                 <li><a href="/">home</a></li>
-                <li><a href="/art/index.html">art</a></li>
+                <li><a href="/art">gallery</a></li>
+                <li><a href="/com">commissions</a></li>
+                <li><a href="https://milobyte.atabook.org">guestbook</a></li>
             </ul>
         </div>
         <div class="window">
