add art, improve mobile gallery display

--- a/templates/post.html
+++ b/templates/post.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-    <div style="width: 900px">
+    <div style="max-width: 900px">
         <div class="window" style="display:inline-block; margin-bottom: 0;">
             <ul class="hnav">
                 <h2 class="inline">nav</h2>
