new hypertemplate version, ogp metadata for comms page

--- a/templates/basic-page.html
+++ b/templates/basic-page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<--field --name="head-content" --default="">
 <title><--field --name="title"></title>
 <link rel="stylesheet" href='/style.css'>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -47,4 +48,3 @@
 </footer>
 </body>
 </html>
-
