--- a/templates/basic-page.html
+++ b/templates/basic-page.html
@@ -7,44 +7,41 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-<table class="main">
-<tr>
-    <th>
-        <div class="window">
+
+<div class="horizontal centered">
+    <div class="vertical">
+        <div class="window" style="width: 86px;">
             <h2>nav</h2>
-            <ul class="vnav">
-                <li><a href="/">home</a></li>
-                <li><a href="/art">gallery</a></li>
-                <li><a href="/com">commissions</a></li>
-                <li><a href="https://milobyte.atabook.org">guestbook</a></li>
-            </ul>
+            <a href="/">home</a><br>
+            <a href="/art">gallery</a><br>
+            <a href="/com">commissions</a><br>
+            <a href="https://milobyte.atabook.org">guestbook</a><br>
         </div>
-        <div class="window">
+        <div class="window" style="width: 86px;">
             <h2>social</h2>
-            <ul class="vnav">
-                <li><a href="https://bsky.app/profile/milobit.net">bluesky</a></li>
-                <li><a href="https://github.com/milo256">github</a></li>
-                <li><a href="https://www.youtube.com/@milo3733">youtube</a></li>
-                <li><a href="https://milobyte.tumblr.com/">tumblr</a></li>
-                <li><a href="https://milobyte.newgrounds.com/">newgrounds</a></li>
-                <li><b>discord:</b> @milo28</li>
-            </ul>
+            <a href="https://bsky.app/profile/milobit.net">bluesky</a><br>
+            <a href="https://github.com/milo256">github</a><br>
+            <a href="https://www.youtube.com/@milo3733">youtube</a><br>
+            <a href="https://milobyte.tumblr.com/">tumblr</a><br>
+            <a href="https://milobyte.newgrounds.com/">newgrounds</a><br>
+            <b>discord:</b> @milo28<br>
         </div>
-        <img src='/graphics/cloud.png'>
-        <img src='/graphics/any-browser.png'>
-        <img src='/graphics/catboys-meow.webp'>
-        <img src='/graphics/make-a-website.jpg'>
+        <a><img src='/graphics/cloud.png'></a>
+        <a><img src='/graphics/any-browser.png'></a>
+        <a><img src='/graphics/catboys-meow.webp'></a>
+        <a><img src='/graphics/make-a-website.jpg'></a>
         <!-- <a href='https://www.blender.org'><img src='/graphics/blender.gif'></a> -->
         <a href='https://neovim.io'><img src='/graphics/neovim.png'></a>
         <a href='https://archlinux.org'><img src='/graphics/archlinux.gif'></a>
-    </th>
-    <td>
+    </div>
+    <div class="vertical" style="flex: auto; max-width: 480px">
         <--inner-html>
-    </td>
-</tr>
-</table>
+    </div>
+</div>
+<br>
 <footer>
     <p>milobit.net - est 2024</p>
 </footer>
+
 </body>
 </html>
