new gallery view and post build script

--- a/templates/basic-page.html
+++ b/templates/basic-page.html
@@ -34,9 +34,9 @@
         <a href='https://neovim.io'><img src='/graphics/neovim.png'></a>
         <a href='https://archlinux.org'><img src='/graphics/archlinux.gif'></a>
     </div>
-    <div class="vertical" style="flex: auto; max-width: 480px">
+    <!--<div class="vertical" style="flex: auto; max-width: 480px">-->
         <--inner-html>
-    </div>
+        <!--</div>-->
 </div>
 <br>
 <footer>
