--- a/docs/style.css
+++ b/docs/style.css
@@ -42,6 +42,12 @@ body {
     text-decoration: underline;
 }
 
+.image-count-label {
+    position: absolute;
+    padding: 0 8px;
+    background-color: var(--bgbase);
+}
+
 
 h1, h2 {
     text-align: center;
