--- a/templates/basic-page.html
+++ b/templates/basic-page.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-<div class="horizontal centered">
-    <div class="vertical">
+<div class="horizontal centered align-start">
+    <div class="vertical" style="position: sticky; top: 8px;">
         <div class="window" style="width: 86px;">
             <h2>nav</h2>
             <a href="/">home</a><br>
