--- a/templates/post.html
+++ b/templates/post.html
@@ -7,18 +7,13 @@
 </head>
 <body>
     <div class="horizontal centered">
-    <div class="vertical align-start" style="max-width: 900px;">
-        <div class="window hnav" style="width: unset;">
+    <div class="vertical" style="max-width: 900px;">
+        <div style="width: auto; display: flex;">
+        <div class="window hnav" style="nowrap; width: 0; flex: 1;">
             <h2 class="inline">nav</h2><a href="/">home</a><a href="/art">gallery</a><a href="/com">commissions</a><a href="https://milobyte.atabook.org">guestbook</a>
         </div>
-        <br>
-        <div class="window">
-            <div class="hnav", style="position:absolute; right: 0;">
-                <a href="<--field --name="previous">"><- previous</a><a href="<--field --name="next">">next -></a>
-            </div>
-            <h2><--field --name="title"></h2>
-            <--inner-html>
         </div>
+        <--inner-html>
     </div>
     </div>
 <footer>
