--- a/templates/basic-page.html
+++ b/templates/basic-page.html
@@ -24,6 +24,7 @@
             <a href="https://www.youtube.com/@milo3733">youtube</a><br>
             <a href="https://milobyte.tumblr.com/">tumblr</a><br>
             <a href="https://milobyte.newgrounds.com/">newgrounds</a><br>
+            <a href="https://artfight.net/~milobyte">artfight</a><br>
             <b>discord:</b> @milo28<br>
         </div>
         <a><img src='/graphics/cloud.png'></a>
