--- a/docs/style.css
+++ b/docs/style.css
@@ -27,6 +27,10 @@ body {
     font-size: 12px;
 }
 
+hr {
+    color: var(--borderl);
+}
+
 h1, h2 {
     text-align: center;
     border-bottom: 1px solid var(--borderl);
