remove less active social media accounts

--- a/templates/basic-page.html
+++ b/templates/basic-page.html
@@ -20,11 +20,7 @@
         <div class="window" style="width: 86px;">
             <h2>social</h2>
             <a href="https://bsky.app/profile/milobit.net">bluesky</a><br>
-            <a href="https://github.com/milo256">github</a><br>
-            <a href="https://www.youtube.com/@milo3733">youtube</a><br>
-            <a href="https://milobyte.tumblr.com/">tumblr</a><br>
-            <a href="https://milobyte.newgrounds.com/">newgrounds</a><br>
-            <a href="https://artfight.net/~milobyte">artfight</a><br>
+            <a href="https://tumblr.com/milobyte">tumblr</a><br>
             <b>discord:</b> @milo28<br>
         </div>
         <a><img src='/graphics/cloud.png'></a>
