--- a/templates/basic-page.html
+++ b/templates/basic-page.html
@@ -21,7 +21,7 @@
             <h2>social</h2>
             <a href="https://bsky.app/profile/milobit.net">bluesky</a><br>
             <a href="https://tumblr.com/milobyte">tumblr</a><br>
-            <a href="https://mastodon.art/@milobyte">mastodon</a><br>
+            <a rel="me" href="https://mastodon.art/@milobyte">mastodon</a><br>
             <b>discord:</b> @milo28<br>
         </div>
         <a><img src='/graphics/cloud.png'></a>
