--- a/templates/basic-page.html
+++ b/templates/basic-page.html
@@ -8,35 +8,10 @@
 </head>
 <body>
 
+<div id="top-bar"></div>
+<div id="top-banner"></div>
 <div class="horizontal centered align-start">
-    <div class="vertical" style="position: sticky; top: 8px;">
-        <div class="window" style="width: 86px;">
-            <h2>nav</h2>
-            <a href="/">home</a><br>
-            <a href="/art">gallery</a><br>
-            <a href="https://milobyte.atabook.org">guestbook</a><br>
-        </div>
-        <div class="window" style="width: 86px;">
-            <h2>social</h2>
-            <a href="https://bsky.app/profile/milobit.net">bluesky</a><br>
-            <a href="https://tumblr.com/milobyte">tumblr</a><br>
-            <a rel="me" href="https://sunny.garden/@milobyte">mastodon</a><br>
-            <b>discord:</b> @milo28<br>
-        </div>
-        <a><img src='/graphics/cloud.png'></a>
-        <a><img src='/graphics/any-browser.png'></a>
-        <a><img src='/graphics/catboys-meow.webp'></a>
-        <a><img src='/graphics/make-a-website.jpg'></a>
-        <!-- <a href='https://www.blender.org'><img src='/graphics/blender.gif'></a> -->
-        <a href='https://neovim.io'><img src='/graphics/neovim.png'></a>
-        <a href='https://archlinux.org'><img src='/graphics/archlinux.gif'></a>
-    </div>
-    <!--<div class="vertical" style="flex: auto; max-width: 480px">-->
-        <--inner-html>
-        <!--</div>-->
+    <--inner-html>
 </div>
-<footer>
-    <p>milobit.net - est 2024</p>
-</footer>
 </body>
 </html>
