--- a/templates/art-gallery.html
+++ b/templates/art-gallery.html
@@ -8,13 +8,13 @@
 <body>
 
 <div id="top-bar" class="centered">
-    <div>
-        <div>
-            <a id="home-button" href="/"><- home</a>
-            <div class="sep"></div>
+    <div id="top-bar-buttons">
+        <div class="top-bar-button-group">
+            <a id="left-margin-button" href="/"><- home</a>
+            <div class="top-bar-separator"></div>
             <b>MY ART</b>
         </div>
-        <div style="gap: 6px;">
+        <div class="top-bar-button-group">
             <--field --name="prev">
             <--field --name="page-number">/<--field --name="page-count">
             <--field --name="next">
@@ -23,52 +23,17 @@
 </div>
 <div id="top-banner"></div>
 <div class="horizontal centered align-start">
-    <!--<div class="vertical" style="flex: auto; max-width: 480px">-->
-        <--inner-html>
-        <!--</div>-->
+    <--inner-html>
 </div>
 
 <footer>
     <p>milobit.net - est 2024</p>
 </footer>
 <style>
-    #home-button {
-        text-wrap: nowrap;
-        padding-right: 10px;
-        position: absolute;
-        right: 100%;
-    }
-    .sep {
-        display: inline-block;
-        width: 1px;
-        margin-right: 8px;
-        height: 100%;
-        background-color: var(--borderl);
-    }
-    #top-bar div {
-        display: flex;
-        align-items: center;
-        height: 100%;
-    }
-    #top-bar > div {
-        box-sizing: border-box;
-        position: relative;
-        color: var(--textl);
-        flex: auto;
-        max-width: 432px;
-        justify-content: space-between;
-    }
-    #top-bar h3 {
-        color: var(--textl);
-    }
-    @media screen and (max-width: 540px) {
-        #top-bar > div {
-            padding-left: 8px;
-            padding-right: 8px;
-        }
-        #home-button {
-            position: static;
-        }
+    #top-bar {
+        position: sticky;
+        z-index: 1;
+        top: 0;
     }
 </style>
 </body>
