--- a/docs/style.css
+++ b/docs/style.css
@@ -167,7 +167,7 @@ a:hover { text-decoration-line: underline; }
 }
 
 .green-button {
-    padding: 12px;
+    padding: 12px 12px;
     border: 1px solid #d1f2af;
     color: #d1f2af;
 }
